; ModuleID = '/home/carl/AnghaBench/disque/src/extr_zmalloc.c_zmalloc_used_memory.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_zmalloc.c_zmalloc_used_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@zmalloc_thread_safe = common dso_local global i64 0, align 8
@used_memory = common dso_local global i64 0, align 8
@used_memory_mutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @zmalloc_used_memory() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @zmalloc_thread_safe, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i64, i64* @used_memory, align 8
  %6 = load i64, i64* %1, align 8
  %7 = call i32 @atomicGet(i64 %5, i64 %6, i32* @used_memory_mutex)
  br label %10

8:                                                ; preds = %0
  %9 = load i64, i64* @used_memory, align 8
  store i64 %9, i64* %1, align 8
  br label %10

10:                                               ; preds = %8, %4
  %11 = load i64, i64* %1, align 8
  ret i64 %11
}

declare dso_local i32 @atomicGet(i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
